--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>percobaan menggunakan git</title>
+    <title>percobaan coding cilik cilikan</title>
 </head>
 <body>
     <p>bismillhirrohmanirrohim</p>
@@ -16,5 +16,10 @@
     <hr>
     <h3>yuhahahahaha</h3>
     <img src="download.jfif">
+    <hr>
+    <p><b>faizal abdul aziz</b></p>
+    <hr><hr><hr>
+    <img src="onepiece.jpg" width="30%">
+    <hr><hr><hr>
 </body>
 </html>
